# gopackagesdriver-repro

./: .bazeliskrc  BUILD.bazel  WORKSPACE
rules/: local-archive.bzl
src/: BUILD.bazel
src/a/: BUILD.bazel
src/b/: BUILD.bazel
src/c/: BUILD.bazel
tools/: gopackagesdriver.sh
