load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "c",
    srcs = ["c.go"],
    importpath = "example.com/c",
    visibility = ["//visibility:public"],
    deps = [
        "//src/a",
        "//src/b",
    ],
)

go_test(
    name = "c_test",
    srcs = ["c_test.go"],
    embed = [":c"],
)
