load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["c.go"],
    importpath = "example.com/c",
    visibility = ["//visibility:public"],
    deps = [
        "//src/a:go_default_library",
        "//src/b:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["c_test.go"],
    embed = [":go_default_library"],
)
